cleanup reflection warning from Java 17